--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,6 @@
-# YAML formatted configuration file for Irkov bot
+# YAML formatted configuration file for NotifBot
 server: 'irc.opoy.fi'
 port: '6667'
-nick: 'irkov'
-realname: 'Irkov bot http://github.com/iiska/irkov/'
-channel: '#ossaajat'
-logdirs:
-        - '/home/iiska/irclogs/#ossaajat'
+nick: 'notif'
+realname: 'Simple notification bot'
+channel: '#NotifBot-test'
